# config-environnements

./: README.md
ProjetCMakeOpenGL/: CMakeLists.txt  main.cpp  runGlutExample.cpp  runSdlExample.cpp  runSfmlExample.cpp
ProjetTest/: CMakeLists.txt  ProjetTest.sln  ProjetTest.vcxproj  ProjetTest.vcxproj.filters  main.cpp  runGlutExample.cpp  runSdlExample.cpp  runSfmlExample.cpp
ProjetVscodeOpenGL/: CMakeLists.txt  main.cpp
doc/: Ubuntu.md  Vcpkg.md
